improvement: userpanel, additional logout button to bclean style (useful when viewport is small)

--- a/userpanel/style/bclean/body.html
+++ b/userpanel/style/bclean/body.html
@@ -5,6 +5,7 @@
 			<span id="lms-ui-session-expire" class="font-weight-bold text-danger">
 				{sprintf("%02d:%02d", floor($timeout / 60), $timeout % 60)}
 			</span>
+			{button type="link" icon="logout" href="?m=logout"}
 		</small>
 	</div>
 </div>
